--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
             <artifactId>javax.mail</artifactId>
             <version>1.5.6</version>
         </dependency>
+        <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+	    </dependency>
 
         <dependency>
             <groupId>javax.xml.bind</groupId>
@@ -154,6 +159,7 @@
 	    	<name>John Doe</name>
 	    	<email>jdoe@example.com</email>
 	    </developer>
+	    
 	    
     </developers>
 
