--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
     <dependencies>
 
         <dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
+		
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>4.3.5.RELEASE</version>
@@ -159,7 +165,6 @@
 	    	<name>John Doe</name>
 	    	<email>jdoe@example.com</email>
 	    </developer>
-	    
 	    
     </developers>
 
